@@ -1,5 +1,7 @@
 package ec.edu.espe.autorms.controllers;
 
+import org.springframework.security.oauth2.client.OAuth2AuthorizedClient;
+import org.springframework.security.oauth2.client.annotation.RegisteredOAuth2AuthorizedClient;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
@@ -10,7 +12,12 @@ import java.util.Map;
 @RestController
 public class IndexController {
     @GetMapping("/authorized")
-    public Map<String, String> authorize(@RequestParam String code) {
-        return Collections.singletonMap("authorizationCode", code);
+    public Map<String, String> authorized(
+            @RegisteredOAuth2AuthorizedClient("autor-ms") OAuth2AuthorizedClient client
+    ) {
+        return Map.of(
+                "message", "Login Exitoso",
+                "access_token", client.getAccessToken().getTokenValue()
+        );
     }
 }
